force-app/main/default/objects/Applicant_Profile__c/Applicant_Profile__c.object-meta.xml
<CustomObject>
    <description>Stores personal and financial information for loan applicants</description>
    <label>Applicant Profile</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>