force-app/main/default/objects/Applicant_Profile__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Complete address of the applicant</description>
    <inlineHelpText>Enter the applicant's complete mailing address</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>