force-app/main/default/objects/Applicant_Profile__c/fields/Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Application_Count__c</fullName>
    <description>Formula field that counts the number of loan applications for this applicant</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of loan applications submitted by this applicant</inlineHelpText>
    <label>Application Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>