force-app/main/default/objects/Applicant_Profile__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of birth of the applicant</description>
    <inlineHelpText>Enter the applicant's date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>