force-app/main/default/objects/Applicant_Profile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the applicant</description>
    <inlineHelpText>Enter the applicant's primary email address</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>