force-app/main/default/objects/Applicant_Profile__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Current employment status of the applicant</description>
    <inlineHelpText>Select the applicant's current employment status</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>