force-app/main/default/objects/Applicant_Profile__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of the applicant</description>
    <inlineHelpText>Enter the applicant&apos;s primary phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>