force-app/main/default/objects/Applicant_Profile__c/fields/SSN_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>SSN_Encrypted__c</fullName>
    <description>Encrypted Social Security Number for the applicant</description>
    <inlineHelpText>Enter the applicant's Social Security Number (will be encrypted)</inlineHelpText>
    <label>SSN (Encrypted)</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>