force-app/main/default/objects/Applicant_Profile__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <description>Total monthly income of the applicant</description>
    <inlineHelpText>Enter the applicant's total monthly income</inlineHelpText>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>