force-app/main/default/objects/Applicant_Profile__c/validationRules/Valid_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Age</fullName>
    <active>true</active>
    <description>Ensures applicant is 18+ years old based on Date of Birth</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Date_of_Birth__c)),
    Date_of_Birth__c &gt; TODAY() - (18 * 365)
)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Applicant must be at least 18 years old</errorMessage>
</ValidationRule>