force-app/main/default/objects/Applicant_Profile__c/validationRules/Valid_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Email_Format</fullName>
    <active>true</active>
    <description>Ensures email format contains @ and dot</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Email__c)),
    OR(
        NOT(CONTAINS(Email__c, "@")),
        NOT(CONTAINS(Email__c, ".")),
        NOT(CONTAINS(RIGHT(Email__c, LEN(Email__c) - FIND("@", Email__c)), "."))
    )
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address with @ and domain</errorMessage>
</ValidationRule>