force-app/main/default/objects/Applicant_Profile__c/validationRules/Valid_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Phone_Format</fullName>
    <active>true</active>
    <description>Ensures phone number has 10 digits</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone__c)),
    LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c, "(", ""), ")", ""), "-", ""), " ", ""), ".", "")) != 10
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number must contain exactly 10 digits</errorMessage>
</ValidationRule>